tf/ecs_project/ecs.tf
# 9.2.1 ECSクラスタの定義
resource "aws_ecs_cluster" "example" {
  name = "example"
}

# 9.2.2 タスク定義
resource "aws_ecs_task_definition" "example" {
  family                   = "example" # タスク定義のプレフィックスになる
  cpu                      = "256"
  memory                   = "512"
  network_mode             = "awsvpc" # fargateのときはこれ
  requires_compatibilities = ["FARGATE"]
  container_definitions    = file("./container_definitions.json")
  # 9.3.3 ECSタスク実行IAMロールを追加
  execution_role_arn       = module.ecs_task_execution_role.iam_role_arn
}

# 9.2.3 ECSサービス
resource "aws_ecs_service" "example" {
  name                              = "example"
  cluster                           = aws_ecs_cluster.example.arn
  task_definition                   = aws_ecs_task_definition.example.arn
  desired_count                     = 2
  launch_type                       = "FARGATE"
  platform_version                  = "1.3.0"
  health_check_grace_period_seconds = 60 # ヘルスチェックの定義自体はDocker?

  network_configuration {
    assign_public_ip = false
    security_groups  = [module.nginx_sg.security_group_id]

    subnets = [
      aws_subnet.private_0.id,
      aws_subnet.private_1.id,
    ]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.example.arn
    container_name   = "example"
    container_port   = 80
  }

  lifecycle {
    ignore_changes = [task_definition]
  }
}

module "nginx_sg" {
  source      = "./security_group"
  name        = "nginx-sg"
  vpc_id      = aws_vpc.example.id
  port        = 80
  cidr_blocks = [aws_vpc.example.cidr_block]
}



# 9.3.1 CloudWatch Logs
resource "aws_cloudwatch_log_group" "for_ecs" {
  name              = "/ecs/example"
  retention_in_days = 180
}
